--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "@angular/router": "^17.3.5"
   },
   "devDependencies": {
-    "@angular/cli": "^17.3.7"
+    "@angular/cli": "latest"
   },
   "scripts": {
     "build": "bash build.sh"
